tests/ui/codegen/mir/validation/parse_unknown_block.mir
//@compile-flags: --pass none

@module UnknownBlock

fn @f() {
  bb0:
    jump bb9 //~ ERROR: unknown block `bb9`
}
